--- a/CSS/style.css
+++ b/CSS/style.css
@@ -78,4 +78,108 @@ span{
     color: var(--main-color);
 }
 
+.home, .about{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.home-img{
+    border-right: solid 0.6rem var(--main-color);
+    border-bottom: solid 0.6rem var(--main-color);
+    border-image: linear-gradient(135deg, transparent 50%, var(--main-color) ) 1;
+}
+
+.about-img{
+    border-right: solid 0.6rem var(--main-color);
+    border-bottom: solid 0.6rem var(--main-color);
+    border-image: linear-gradient(225deg, transparent 50%, var(--main-color) ) 1;
+}
+
+.about{
+    background-color: var(--bg-color-02);
+}
+
+
+
+.home-content , .about-content {
+    width: 45%;
+}
+
+.home-content h1, .about-content h1 {
+    font-weight: 700;
+    line-height: 1.3;
+    font-size: 1.6rem; /* TEST */
+}
+
+.home-content h3, .about-content h3 {
+    font-weight: 700;
+    font-size: 1.6rem;
+}
+.home-content p, .about-content p {
+    margin-top: 1.2rem;
+    text-align: justify;
+}
+
+.home-img img, .about-img img{
+    width: 100%;
+}
+
+.services h2,
+.portifolio h2,
+.contact h2 {
+    font-size: 2.2rem;
+    margin: 1rem;
+    text-align: center;
+}
+
+.services-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
+.services-box{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 25rem;
+    margin-bottom: 1rem;
+}
+a {
+    color: var(--color-03);
+}
+.services-container .services-box {
+    padding: 2rem 1rem 2.5rem;
+    border-radius: 1.2rem;
+    text-align: center;
+    border: solid 0.15rem var(--main-color);
+    background-color: var(--bg-color-02);
+    transition: 0.5s ease;
+ }
+ 
+ .services-container .services-box:hover {
+    border-color: var(--main-color);
+    transform: scale(1.01);
+ }
+ 
+.services-box i {
+    font-size: 4.3rem;
+    color: var(--main-color);
+}
+ 
+.services-box h3 {
+  margin: 0.5rem;
+}
+
+.services-box p {
+  margin: 0.5rem;
+  letter-spacing: 0.1rem;
+  /* n linhas ... */
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 
