--- a/CSS/style.css
+++ b/CSS/style.css
@@ -183,3 +183,28 @@ a {
   text-overflow: ellipsis;
 }
 
+
+
+
+
+
+
+
+.btn{
+    display: inline-block;
+    padding: 0.7rem 1.8rem;
+    background-color: var(--main-color);
+    border-radius: 2rem;
+    color: var(--bg-color-02);
+    font-weight: 600;
+    letter-spacing: 0.1rem;
+    transition: 0.3s ease;
+    margin-top: 1.2rem;
+}
+
+.btn:hover {
+    box-shadow: 0 0 0.3rem;
+    background-color: inherit;
+    color: var(--main-color);
+    cursor: pointer;
+}
