--- a/CSS/style.css
+++ b/CSS/style.css
@@ -184,10 +184,116 @@ a {
 }
 
 
+.portifolio {
+    background-color: var(--bg-color-02);
+}
+
+.portifolio-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 1.2rem;
+}
+
+.portifolio-box {
+    position: relative;
+    overflow: hidden;
+}
+
+.portifolio-box img {
+    width: 100%;
+    transition: 0.5s ease;
+}
+
+.portifolio-box:hover img {
+    transform: scale(1.1);
+}
+
+.portifolio-box .portifolio-layer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    padding: 0 2rem;
+    background: linear-gradient(transparent, var(--main-color));
+    transform: translateY(100%);
+    transition: transform 0.5s ease;
+}
+
+.portifolio-box:hover .portifolio-layer {
+    transform: translateY(0);
+}
 
 
 
+.portifolio-layer h4 {
+    font-size: 1rem;
+}
 
+.portifolio-layer p {
+    margin: 0.2rem 0 0.5rem;
+}
+
+.portifolio-layer a {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 3rem;
+    height: 3rem;
+    background: var(--text-color);
+    border-radius: 50%;
+}
+
+.portifolio-layer a i {
+    font-size: 1.2rem;
+    color: var(--bg-color-02);
+}
+
+form {
+    max-width: 45rem;
+    margin: 0.6rem auto;
+    text-align: center;
+    margin-bottom: 2rem;
+
+
+    
+}
+
+form .input-box{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+form .input-box input, form textarea {
+    width: 100%;
+    padding: 1rem;
+    font-size: 1rem;
+    background-color: var(--bg-color-02);
+    border-radius: 0.5rem;
+    margin: 0.4rem 0 ;
+
+
+    
+}
+
+form textarea { 
+    resize: none;
+}
+
+footer{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 1.2rem;
+    background-color: var(--bg-color-01);
+}
 
 
 .btn{
@@ -200,6 +306,30 @@ a {
     letter-spacing: 0.1rem;
     transition: 0.3s ease;
     margin-top: 1.2rem;
+}
+
+.social-media img {
+    width: 3.5rem;
+}
+.social-media a {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 2.5rem;
+    height: 2.5rem;
+    background: transparent;
+    border: solid 0.15rem var(--main-color);
+    border-radius: 50%;
+    font-size: 2rem;
+    color: var(--main-color);
+    margin: 1.8rem 0.5rem;
+    transition: 0.5s ease;
+}
+
+.social-media a:hover {
+    background-color: var(--main-color);
+    color: var(--bg-color-02);
+    box-shadow: 0 0 0.3rem var(--main-color);
 }
 
 .btn:hover {
