--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,7 +2,7 @@
 
 :root {
     --main-color: #00eeff;
-    --text-color: #ffff;
+    --text-color: #ffffffff;
     --bg-color-01: #1f242d;
     --bg-color-02: #323946;
     --color-00: #0000001a;
@@ -338,3 +338,28 @@ footer{
     color: var(--main-color);
     cursor: pointer;
 }
+
+/* menu hamburguer */
+.menu-hamburguer{
+    display: none;
+    cursor: pointer;
+}
+
+.bar1, .bar2, .bar3 {
+    width: 2rem;
+    height: 0.3rem;
+    background-color: var(--text-color);
+    transition: 0,3s ease;
+}
+
+.change, .bar1 {
+    transform: translate(0, 0.65rem) rotate(-45deg);
+}
+.change, .bar2 {
+    opacity: 0;
+}
+.change, .bar3 {
+    transform: translate(0, -0.65rem) rotate(45deg);
+}
+/* menu hamburguer */
+
