--- a/CSS/style.css
+++ b/CSS/style.css
@@ -349,7 +349,9 @@ footer{
     width: 2rem;
     height: 0.3rem;
     background-color: var(--text-color);
+    margin: 0.4rem 0;
     transition: 0,3s ease;
+    
 }
 
 .change, .bar1 {
@@ -384,5 +386,27 @@ footer{
 @media (min-width: 576px) {
     header{
         background-color: var(--color-02); /*TEST*/
+    }
+}
+
+/* Medium (md): Tablet */
+
+@media (min-width: 768px) {
+    header{
+        background-color: var(--color-03); /*TEST*/
+    }
+}
+
+/* Large (lg): Laptop */
+@media (min-width: 992px) {
+    header{
+        background-color: var(--color-04); /*TEST*/
+    }
+}
+/*Extra large (XL): Desktop  */
+
+@media (min-width: 1200px) {
+    header{
+        background-color: var(--color-05); /*TEST*/
     }
 }
